# Voice-Terminal-Assistant

./: .gitignore  README.md  aifc.py  audioop.py  bootstrap.py  command_executor.py  config.py  install.ps1  main.py  pyproject.toml  requirements.txt  voice_processor.py
distutils/: __init__.py  version.py
tests/: test_commands.py
