[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-terminal-assistant"
version = "0.1.0"
description = "A privacy-first local voice-to-terminal assistant"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Open Source Contributor" }]
dependencies = [
  "SpeechRecognition==3.10.0",
  "PyAudio==0.2.13",
  "pocketsphinx==0.1.15",
  "pyaudio==0.2.13",
  "pydub==0.25.1",
  "python-dotenv==1.0.0",
]

[tool.setuptools]
py-modules = ["config", "voice_processor", "command_executor", "main"]
